--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=ace10f6eebde3384e0660338bcf0a0a3
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://aurelie:MdP@127.0.0.1:3306/myamm
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
